# JarHert

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
assistant/: __init__.py  action_executor.py  action_queue.py  action_schema.py  action_validator.py  action_worker.py  admin_status_service.py  agent_jobs.py  ai_answer_service.py  automation_runtime.py  coding_jobs.py  command_handlers.py  communication_style.py  contact_book.py  context_store.py  delivery_outbox.py  google_docs_sync.py  google_sheets_sync.py  hermes_client.py  ideas.py  input_router.py  intents.py  job_orchestration.py  limits.py  llm_action_extractor.py  memory.py  model_holdout.py  natural_action_service.py  natural_router.py  natural_tasks.py  observability.py  perf.py  personal_knowledge.py  pipeline.py  planner_dag.py  preferences.py  provider_clients.py  provider_diagnostics.py  provider_fallback.py  provider_policy.py  (+20 more)
backend/: automation_store.py  coding_job_store.py  config.py  contact_store.py  db.py  event_store.py  idempotency_store.py  main.py  memory_store.py  message_store.py  migrations.py  models.py  monitor_job_store.py  personal_export.py  personal_knowledge_store.py  provider_budget_store.py  provider_health_store.py  queue_store.py  store_converters.py  stores.py  trace_store.py  training_feedback_store.py  user_store.py
docs/: agent-workflow.md  communication-style.md  first-users.md  google-docs-webhook.md  system-audit.md  system-map.md  training-data.md
gateway_bot/: __init__.py  blocking_executor.py  deferred_work.py  main.py  service.py  telegram_app.py  telegram_callbacks.py  (+2 more)
(+359 files in other folders)
