[project]
name = "telegram-ai-brooch"
version = "0.1.0"
description = "Hermes-backed Telegram AI assistant with safety gates, reminders, memory, and free-tier provider routing."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.10",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "telethon>=1.36",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
google = [
  "gspread>=6.0",
  "oauth2client>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["assistant*", "backend*", "gateway_bot*", "reminders*", "telegram_collector*"]

[tool.setuptools.package-data]
assistant = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
