[project]
name = "jarhert"
version = "0.2.0"
description = "Hermes-native personal operating system for Telegram."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "telethon>=1.44",
  "mcp>=1.26",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
google = [
  "gspread>=6.0",
  "oauth2client>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes*"]
namespaces = true

[tool.setuptools.package-data]
"hermes.native_tools" = ["dashboard_assets/*.css", "dashboard_assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
